--- a/wireframes.html
+++ b/wireframes.html
@@ -1,117 +1,124 @@
-
 <!-- Code structure has been mostly adapted to use from Paul Brokenshire. Additional
 	codes not learned from lecture and tutorials have been from support websites and/or from our team's own knowledge. Support websites are given credit within the code as well as in our Citiations page -->
 
 <!doctype html>
 
-	<head>
-		<meta charset="utf-8">
-		<title>User Flow Wireframes</title>
-		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
-     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/styleguide.css">
-		<link rel="stylesheet" href="css/fonts.css">
-		<link rel="stylesheet" href="css/grids.css">
+<head>
+	<meta charset="utf-8">
+	<title>User Flow Wireframes</title>
+	<!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/styleguide.css">
+	<link rel="stylesheet" href="css/fonts.css">
+	<link rel="stylesheet" href="css/grids.css">
 
-	</head>
+</head>
 
-	<body>
-		<header>
-			 <nav class="grid styleguide">
-				<a href="sitemap.html">Site Map</a>
-				<a href="wireframes.html">Wireframes</a>
-			</nav>
-		</header>
-
-		<!--User Goals Section-->
-		<section class="user-tasks">
-			<h1 class="styleguide">User Tasks</h1>
-				<ol>
-					<li>Learn about what the company values </li>
-					<li>Order a bouquet of flowers for a special occasion, like an anniversary</li>
-					<li>Order a floral package for a large-scale event, like a wedding</li>
-					<li>Find the company's address, operating hours, and contact information</li>
-					<li>Find if a user's location is serviced for delivery </li>
-					<li>See reviews and be able to leave own reviews </li>
-					<li>Be informed of special events or sales</li>
-					<li>Be informed of products that are new, on sale, and out of stock</li>
-				</ol>
-		</section>
-
-		<!-- Secondary Nav -->
-		<nav class="grid sub-nav">
-			<a href="#task1">Task 1</a>
-			<a href="#task2">Task 2</a>
-			<a href="#task3">Task 3</a>
-			<a href="#task4">Task 4</a>
-			<a href="#task5">Task 5</a>
-			<a href="#task6">Task 6</a>
-			<a href="#task7">Task 7</a>
-			<a href="#task8">Task 8</a>
+<body>
+	<header>
+		<nav class="grid styleguide">
+			<a href="sitemap.html">Site Map</a>
+			<a href="wireframes.html">Wireframes</a>
 		</nav>
+	</header>
 
-		<!--Wireframes Section-->
-		<section class="wireframes">
-			<h1 class="styleguide">User Flow Wireframes</h1>
-				<!--Task 1-->
-				<section id="task1">
-					<h2>Learn about what the company values.</h2>
-						<img src="img/wireframes/task1.png" alt="Desktop and mobile userflows for Task 1: Learn about what the company values">
-				</section>
+	<!--User Goals Section-->
+	<section class="user-tasks">
+		<h1 class="styleguide">User Tasks</h1>
+		<ol>
+			<li>Learn about what the company values </li>
+			<li>Order a bouquet of flowers for a special occasion, like an anniversary</li>
+			<li>Order a floral package for a large-scale event, like a wedding</li>
+			<li>Find the company's address, operating hours, and contact information</li>
+			<li>Find if a user's location is serviced for delivery </li>
+			<li>See reviews and be able to leave own reviews </li>
+			<li>Be informed of special events or sales</li>
+			<li>Be informed of products that are new, on sale, and out of stock</li>
+		</ol>
+	</section>
 
+	<!-- Secondary Nav -->
+	<nav class="grid sub-nav">
+		<a href="#task1">Task 1</a>
+		<a href="#task2">Task 2</a>
+		<a href="#task3">Task 3</a>
+		<a href="#task4">Task 4</a>
+		<a href="#task5">Task 5</a>
+		<a href="#task6">Task 6</a>
+		<a href="#task7">Task 7</a>
+		<a href="#task8">Task 8</a>
+	</nav>
 
-				<!--Task 2-->
-				<section id="task2">
-					<h2>Order a bouquet of flowers for an anniversary.</h2>
-						<img src="img/wireframes/task2.png" alt="Desktop and mobile userflows for Task 2: Order a bouquet of flowers for an anniversary." >
-				</section>
-
-				<!--Task 3-->
-				<section id="task3">
-					<h2>Order a floral package for a wedding.</h2>
-						<img src="img/wireframes/task3.png" alt="Desktop and mobile  userflows for Task 3: Order a floral package for a wedding.">
-				</section>
-
-
-				<!--Task 4-->
-				<section id="task4">
-					<h2>Find the company's address, operating hours, and contact information.</h2>
-						<img src="img/wireframes/task4.png" alt="Desktop and mobile userflows for Task 4.">
-				</section>
-
-				<!--Task 5-->
-				<section id="task5">
-					<h2>Find out if my location is serviced for delivery.</h2>
-						<img src="img/wireframes/task5.png" alt="Desktop and mobile userflows for Task 5: Find out if a user's location is serviced for delivery.">
-				</section>
-
-				<!--Task 6-->
-				<section id="task6">
-					<h2>View and have the ability to write a product review.</h2>
-						<img src="img/wireframes/task6.png" alt="Desktop and mobile userflows for Task 6: View and have the ability to write a product review.">
-				</section>
-
-				<!--Task 7-->
-				<section id="task7">
-					<h2>Be informed of special events or sales.</h2>
-						<img src="img/wireframes/task7.png" alt="Desktop and mobile userflows for Task 7: Be informed of special events or sales">
-				</section>
-
-				<!--Task 8-->
-				<section id="task8">
-					<h2>Be informed of products that are new, on sale, and out of stock.</h2>
-						<img src="img/wireframes/task8.png" alt="Desktop and mobile userflows for Task 8">
-				</section>
-
-		</section> <!--.wireframes ends-->
-
-		<!--Mock Ups Section-->
-		<section class="mockups">
-			<h1 class="styleguide">MOCK UP EXAMPLE</h1>
-				<img src="img/home-mockups.png" alt="High-fidelity mockups of the company's home page">
+	<!--Wireframes Section-->
+	<section class="wireframes">
+		<h1 class="styleguide">User Flow Wireframes</h1>
+		<!--Task 1-->
+		<section id="task1">
+			<h2>Learn about what the company values.</h2>
+			<img src="img/wireframes/task1.png"
+				alt="Desktop and mobile userflows for Task 1: Learn about what the company values">
 		</section>
 
-	</body>
+
+		<!--Task 2-->
+		<section id="task2">
+			<h2>Order a bouquet of flowers for an anniversary.</h2>
+			<img src="img/wireframes/task2.png"
+				alt="Desktop and mobile userflows for Task 2: Order a bouquet of flowers for an anniversary.">
+		</section>
+
+		<!--Task 3-->
+		<section id="task3">
+			<h2>Order a floral package for a wedding.</h2>
+			<img src="img/wireframes/task3.png"
+				alt="Desktop and mobile  userflows for Task 3: Order a floral package for a wedding.">
+		</section>
+
+
+		<!--Task 4-->
+		<section id="task4">
+			<h2>Find the company's address, operating hours, and contact information.</h2>
+			<img src="img/wireframes/task4.png" alt="Desktop and mobile userflows for Task 4.">
+		</section>
+
+		<!--Task 5-->
+		<section id="task5">
+			<h2>Find out if my location is serviced for delivery.</h2>
+			<img src="img/wireframes/task5.png"
+				alt="Desktop and mobile userflows for Task 5: Find out if a user's location is serviced for delivery.">
+		</section>
+
+		<!--Task 6-->
+		<section id="task6">
+			<h2>View and have the ability to write a product review.</h2>
+			<img src="img/wireframes/task6.png"
+				alt="Desktop and mobile userflows for Task 6: View and have the ability to write a product review.">
+		</section>
+
+		<!--Task 7-->
+		<section id="task7">
+			<h2>Be informed of special events or sales.</h2>
+			<img src="img/wireframes/task7.png"
+				alt="Desktop and mobile userflows for Task 7: Be informed of special events or sales">
+		</section>
+
+		<!--Task 8-->
+		<section id="task8">
+			<h2>Be informed of products that are new, on sale, and out of stock.</h2>
+			<img src="img/wireframes/task8.png" alt="Desktop and mobile userflows for Task 8">
+		</section>
+
+	</section>
+	<!--.wireframes ends-->
+
+	<!--Mock Ups Section-->
+	<section class="mockups">
+		<h1 class="styleguide">MOCK UP EXAMPLE</h1>
+		<img src="img/home-mockups.png" alt="High-fidelity mockups of the company's home page">
+	</section>
+
+</body>
+
 </html>
