--- a/full-service-form-2of5.html
+++ b/full-service-form-2of5.html
@@ -1,168 +1,189 @@
-
 <!-- Code structure has been mostly adapted to use from Paul Brokenshire. Additional codes not learned from lecture and tutorials have been from support websites and/or from our team's own knowledge. Support websites are given credit within the code as well as in our Citiations page -->
 
 <!doctype html>
 
-	<head>
-		<meta charset="utf-8">
-		<title>Cart</title>
+<head>
+	<meta charset="utf-8">
+	<title>Cart</title>
 
-		 <!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
-    	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Referenced from Week 3's coding tutorial and https://web.dev/responsive-web-design-basics/#viewport-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<!--Referenced Week 2's CSS coding tutorial for linking CSS files-->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/fonts.css">
-		<link rel="stylesheet" href="css/grids.css">
-		<!-- Script for fontawesome -->
-		<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
-	</head>
+	<!--Referenced Week 2's CSS coding tutorial for linking CSS files-->
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/fonts.css">
+	<link rel="stylesheet" href="css/grids.css">
+	<!-- Script for fontawesome -->
+	<script src="https://kit.fontawesome.com/036df06bbb.js" crossorigin="anonymous"> </script>
+</head>
 
-	<body>
-		<!----- Top Nav ----->
-		<header>
-			<div class ="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
-			 <nav class="grid">
-		          <div class="logo col-1of2 ">
-		                 <a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
-		          </div>
-                  <div class="col-1of6">
-                    	<a href="shop.html">Shop</a>
-                    	<div class="dropdown-items">
-                    		 <a href="shop.html">Flowers</a>
-                    		 <a href="shop-plants.html">Plants</a>
-                    	</div>
-                  </div>
-                   <div class="col-1of6">
-                      	<a href="shop-services.html">Services</a>
-                  </div>
-                  <div class="col-1of6">
-                      	<a href="about.html">About</a>
-                  </div>
-                  <div class="col-1of6">
-                     	 <a href="support.html">Support</a>
-                  </div>
-                   <div class="col-1of6">
-                 		 <a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
-            	  </div>
-		            	
-	      </nav>
-		</header>
+<body>
+	<!----- Top Nav ----->
+	<header>
+		<div class="announcement-bar col-1of1-xs">Free delivery over $49. Curbside pickup is available!</div>
+		<nav class="grid">
+			<div class="logo col-1of2 ">
+				<a href="index.html"><img class="logo" src="img/logo.png" alt="Logo of company" width="120" height="30"></a>
+			</div>
+			<div class="hamburger-container">
+				<span class="fa fa-bars" aria-hidden="true"></span>
+				<div class="hamburger-menu">
+					<ul>
+						<li class="hamburger-dropdown"><a href="shop.html">Shop</a>
+						</li>
+						<li>
+							<a href="shop.html">Flowers</a>
 
-		<!----- top container---->
-		<section class="full-service">
+						</li>
+						<li>
+							<a href="shop-plants.html">Plants</a>
+
+						</li>
+						<li><a href="shop-services.html">Services</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="support.html">Support</a></li>
+						<li><a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="shop.html">Shop</a>
+				<div class="dropdown-items">
+					<a href="shop.html">Flowers</a>
+					<a href="shop-plants.html">Plants</a>
+				</div>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="shop-services.html">Services</a>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="about.html">About</a>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="support.html">Support</a>
+			</div>
+			<div class="col-1of6 mobile-hide">
+				<a href="cart.html"> <img src="img/icons/cart-icon.png" alt="Green icon of a shopping cart"> </a>
+			</div>
+
+		</nav>
+	</header>
+
+	<!----- top container---->
+	<section class="full-service">
 
 		<!------ Shipping ------>
-			<h1> Ceremony Details </h1>
-			<div class="form">
-				<form action="/action_page.php">
-					<div class="grid-col-1of2">
-							<div class="name-item">
-								<label for="c-date">Date</label>
-								<input type="text" id="c-date" name="c-date" placeholder="DD/MM/YYYY">
-							</div>
-
-
-							<div class="name-item">
-								<label for="c-time">Time</label>
-								<input type="text" id="c-time" name="c-time" placeholder="00:00 AM/PM">
-							</div>
+		<h1> Ceremony Details </h1>
+		<div class="form">
+			<form action="/action_page.php">
+				<div class="grid-col-1of2">
+					<div class="name-item">
+						<label for="c-date">Date</label>
+						<input type="text" id="c-date" name="c-date" placeholder="DD/MM/YYYY">
 					</div>
 
-					<div class="grid-col-1of1">
-						<label for="c-venue-name">Name of Venue</label>
-				  		<input type="text" id="c-venue-name" name="c-venue-name">
-			  		</div>
 
-			  		<div class="grid-col-1of1">
-				  		<label for="c-location">Location of Venue</label>
-				  		<input type="text" id="c-location" name="c-location">
-			  		</div>
-				</form>
-			</div>
+					<div class="name-item">
+						<label for="c-time">Time</label>
+						<input type="text" id="c-time" name="c-time" placeholder="00:00 AM/PM">
+					</div>
+				</div>
 
-			<h1> Reception Details </h1>
-			<div class="form">
-				<form action="/action_page.php">
-					<div class="grid-col-1of2">
-							<div class="name-item">
-								<label for="r-date">Date</label>
-								<input type="text" id="r-date" name="r-date" placeholder="DD/MM/YYYY">
-							</div>
+				<div class="grid-col-1of1">
+					<label for="c-venue-name">Name of Venue</label>
+					<input type="text" id="c-venue-name" name="c-venue-name">
+				</div>
 
+				<div class="grid-col-1of1">
+					<label for="c-location">Location of Venue</label>
+					<input type="text" id="c-location" name="c-location">
+				</div>
+			</form>
+		</div>
 
-							<div class="name-item">
-								<label for="r-time">Time</label>
-								<input type="text" id="r-time" name="r-time" placeholder="00:00 AM/PM">
-							</div>
+		<h1> Reception Details </h1>
+		<div class="form">
+			<form action="/action_page.php">
+				<div class="grid-col-1of2">
+					<div class="name-item">
+						<label for="r-date">Date</label>
+						<input type="text" id="r-date" name="r-date" placeholder="DD/MM/YYYY">
 					</div>
 
-					<div class="grid-col-1of1">
-						<label for="r-venue-name">Name of Venue</label>
-				  		<input type="text" id="r-venue-name" name="r-venue-name">
-			  		</div>
 
-			  		<div class="grid-col-1of1">
-				  		<label for="r-location">Location of Venue</label>
-				  		<input type="text" id="r-location" name="r-location">
-			  		</div>
-
-			  		<div class="grid-col-1of1 buttons">
-						<div class="left-align">
-								<a href="full-service-form-1of5.html">&#8592; Go back to personal details</a>
-							</div>
-
-						<div class="right-align">
-							<a class="btn-main" href="full-service-form-3of5.html">ART DIRECTION</a>
-						</div>
+					<div class="name-item">
+						<label for="r-time">Time</label>
+						<input type="text" id="r-time" name="r-time" placeholder="00:00 AM/PM">
 					</div>
-					
-				</form>
-			</div>
+				</div>
 
-		</section>
+				<div class="grid-col-1of1">
+					<label for="r-venue-name">Name of Venue</label>
+					<input type="text" id="r-venue-name" name="r-venue-name">
+				</div>
 
-		<!----- Footer----->
-		 <footer class="main-footer grid">
-			 <div class="child-footer about">
-				 <h3>ABOUT FOUR SEASONS FLORAL</h3>
-				 <p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral arrangements.
-			 	</p>
-			</div>
+				<div class="grid-col-1of1">
+					<label for="r-location">Location of Venue</label>
+					<input type="text" id="r-location" name="r-location">
+				</div>
 
-			 <div class="child-footer location">
-				 <h3>VISIT US</h3>
-				 <p>#102-3375 Kingsway
-					Vancouver, B.C. 
-					V5R 5K6  </p>
-			</div>
+				<div class="grid-col-1of1 buttons">
+					<div class="left-align">
+						<a href="full-service-form-1of5.html">&#8592; Go back to personal details</a>
+					</div>
 
-			 <div class="child-footer contact">
-				 <h3 >CONTACT US</h3>
-				 <p>(604) 738-0678</p>
-				 <p>
-				 	<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
-				 </p>
-				 <p>
-				 	<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
-				 </p>
-			 </div>
+					<div class="right-align">
+						<a class="btn-main" href="full-service-form-3of5.html">ART DIRECTION</a>
+					</div>
+				</div>
 
-			 <div class="child-footer mailing-list">
-				 <label>GET THE DIRT</label>
-				 <p>No spam. Just great content.</p>
-				 <input type="text" id="email" name="email" placeholder='name@domain.com'>
-				 <button aria-label="type email address" type="button" class="btn-submit">→</button>
-			 </div>
-	 	</footer>
+			</form>
+		</div>
 
- 		<div class="sub-footer">
-	 			<a href="styleguide.html" target="_blank"> Styleguide</a>
-	 			<a href="citations.html" target="_blank"> Citations</a>
-	 			<a href ="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
- 		</div>
+	</section>
 
-	</body>
+	<!----- Footer----->
+	<footer class="main-footer grid">
+		<div class="child-footer about">
+			<h3>ABOUT FOUR SEASONS FLORAL</h3>
+			<p>We are a family-owned and full-service floral shop based in Vancouver, BC. that creates bespoke floral
+				arrangements.
+			</p>
+		</div>
+
+		<div class="child-footer location">
+			<h3>VISIT US</h3>
+			<p>#102-3375 Kingsway
+				Vancouver, B.C. 
+				V5R 5K6  </p>
+		</div>
+
+		<div class="child-footer contact">
+			<h3>CONTACT US</h3>
+			<p>(604) 738-0678</p>
+			<p>
+				<a href="https://www.instagram.com/fourseasonsfloristry"><i class="fab fa-instagram"></i> Instagram</a>
+			</p>
+			<p>
+				<a href="https://www.facebook.com/fourseasonsfloral/"><i class="fab fa-facebook-f"></i> Facebook</a>
+			</p>
+		</div>
+
+		<div class="child-footer mailing-list">
+			<label>GET THE DIRT</label>
+			<p>No spam. Just great content.</p>
+			<input type="text" id="email" name="email" placeholder='name@domain.com'>
+			<button aria-label="type email address" type="button" class="btn-submit">→</button>
+		</div>
+	</footer>
+
+	<div class="sub-footer">
+		<a href="styleguide.html" target="_blank"> Styleguide</a>
+		<a href="citations.html" target="_blank"> Citations</a>
+		<a href="https://github.com/jaxofone/iat339-p02" target="_blank">GitHub</a>
+	</div>
+
+</body>
 
 </html>
